# Incident-Zero-Multimodal-Agentic-Security-Platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  Dockerfile.old  PROJECT_BLUEPRINT.md  README.md  docker-compose.yml  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  correlator.py  graph.py  main.py  orchestrator.py  registry.py  store.py
backend/mcps/: register_tools.py
backend/mcps/codescan/: evidence_extractor.py  rules.py  scanner.py
backend/mcps/common/: local_extract.py  mistral_client.py  types.py
backend/mcps/diagram_extractor/: run.py
backend/mcps/log_reasoner/: run.py
backend/mcps/patcher/: generator.py
backend/mcps/screenshot_analyzer/: run.py
backend/tests/: test_api.py  test_codescan.py  test_correlator.py  test_diagram.py  test_graph.py  test_log_reasoner.py  test_mistral_client.py  test_patcher.py  test_pipeline_e2e.py  test_rate_limit.py  test_registry.py  test_screenshot.py  test_secret_masking.py
fixtures/vulnerable_repo/: app.py  clean_file.py  config.js
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/job/[jobId]/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: AttackGraph.tsx  EvidenceViewer.tsx  PatchViewer.tsx  Sidebar.tsx
frontend/src/hooks/: useJobEvents.ts
frontend/src/lib/: api-client.ts
frontend/src/types/: api.ts  css.d.ts
schemas/: tool_registry.json
